tests/fixtures/valid/escape_mixed.mmd
flowchart TD
    Start --> A[println 'a\\nb\\tc\\r\\0d']
    A --> End
